--- a/index.html
+++ b/index.html
@@ -1,88 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Million Pixel Advanced</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Million Pixel Pro</title>
 <style>
 :root{
   --bg:#111; --panel:#1a1a1a; --grid:#222;
   --avail:#333; --purchased:#0a0; --selected:#00d600; --hover:#00a3ff;
 }
-*{box-sizing:border-box}
-body{margin:0; font-family:Arial,sans-serif; background:var(--bg); overflow:hidden;}
-nav{position:fixed;top:0;left:0;right:0;height:60px;background:#222;display:flex;align-items:center;padding:10px 16px;z-index:10;}
-nav h1{color:#0f0;font-size:18px;margin:0 auto 0 0;}
+*{box-sizing:border-box;margin:0;padding:0;}
+body{background:var(--bg); font-family:sans-serif; overflow:hidden;}
+nav{position:fixed;top:0;left:0;right:0;height:60px;background:#222;display:flex;align-items:center;padding:0 16px; z-index:20;}
+nav h1{color:#0f0;font-size:18px;margin-right:auto;}
 nav a{color:#fff;text-decoration:none;margin-left:16px;}
 nav a:hover{color:#0f0;}
 
-#canvasContainer{
-  position:absolute; top:60px; left:0; right:0; bottom:0;
-  overflow:hidden; background:var(--bg);
-}
-canvas{ display:block; width:100%; height:100%; touch-action:none; }
+#canvasContainer{position:absolute;top:60px;left:0;right:0;bottom:0;overflow:hidden; background:var(--bg);}
+canvas{display:block;width:100%;height:100%; touch-action:none; cursor:crosshair;}
 
-#buyButton{
-  position:fixed; top:70px; right:20px;
-  padding:12px 18px; background:linear-gradient(135deg,#a3ff4d,#0f0);
-  color:#111; border:none; border-radius:30px; cursor:pointer; z-index:12;
-  font-weight:700; font-size:15px; box-shadow:0 4px 12px rgba(0,255,100,0.3);
-  transition:all .25s ease;
-}
-#buyButton:hover{
-  background:linear-gradient(135deg,#0f0,#7dff32);
-  box-shadow:0 6px 16px rgba(0,255,100,0.5);
-  transform:translateY(-2px);
-}
+#buyButton{position:fixed;top:70px;right:20px;padding:12px 18px;background:#0f0;color:#111;border:none;border-radius:30px;cursor:pointer;z-index:21; font-weight:700;}
+#buyButton:hover{background:#0c0;}
 
-#sidebar{
-  position:fixed; top:60px; right:-400px; width:400px; bottom:0;
-  background:linear-gradient(180deg,#1a1a1a,#111);
-  color:#fff; border-left:1px solid var(--grid);
-  padding:14px; overflow-y:auto; z-index:11; transition:right .25s ease, bottom .25s ease, width .25s ease;
-  box-shadow:-4px 0 16px rgba(0,0,0,0.6);
-}
-#sidebar.open{ right:0; }
-@media (max-width:768px){
-  #sidebar{
-    right:0; bottom:-100%; width:100%; height:250px;
-    border-top:1px solid var(--grid);
-    transition:right .25s ease, bottom .4s ease;
-  }
-  #sidebar.open{ bottom:0; }
-}
+#sidebar{position:fixed;top:60px;right:-400px;width:400px;bottom:0;background:var(--panel);color:#fff;padding:12px;overflow-y:auto;z-index:21;transition:right .25s ease, bottom .25s ease;}
+#sidebar.open{right:0;}
+@media(max-width:768px){#sidebar{width:100%;bottom:-100%;transition:bottom .3s ease;}#sidebar.open{bottom:0;}}
 
-.pixelSection{
-  display:flex; gap:8px; align-items:flex-start;
-  border:1px solid var(--grid); border-radius:6px; padding:8px; margin-bottom:8px; transition:background .2s;
-}
-.pixelSection img{ width:50px; height:50px; object-fit:cover; border-radius:4px; cursor:pointer;}
-.pixelMeta{ flex:1; font-size:13px; line-height:1.3; }
-.pixelSection:hover{ background:#0b2a60; }
-
-#optionsWrapper{margin:10px 0; display:none; gap:8px;}
-.optionBtn{padding:8px; background:#0f0; color:#111; border:none; border-radius:6px; cursor:pointer; font-weight:700;}
+.pixelSection{display:flex;gap:8px;align-items:center;border:1px solid var(--grid);border-radius:6px;padding:6px;margin-bottom:6px;transition:background .2s;}
+.pixelSection:hover{background:#0b2a60;}
+.pixelMeta{flex:1;font-size:13px;line-height:1.3;color:#fff;}
+.pixelSection input[type="file"]{margin-left:4px;}
+.optionWrapper{display:none;flex-direction:column;gap:6px;margin-bottom:6px;}
+.optionBtn{padding:6px;background:#0f0;color:#111;border:none;border-radius:4px;cursor:pointer;font-weight:700;}
 .optionBtn:hover{background:#0c0;}
-#totalCost{ font-weight:bold; margin-top:8px; }
-#checkout, #clearSelection{
-  margin-top:10px; padding:10px; width:100%;
-  background:#0f0; color:#111; border:none; border-radius:6px; cursor:pointer; font-weight:700;
-}
-#checkout:hover, #clearSelection:hover{background:#0c0}
+#totalCost{font-weight:bold;margin:6px 0;}
+#checkout,#clearSelection{width:100%;padding:10px;margin-top:6px;background:#0f0;color:#111;border:none;border-radius:6px;cursor:pointer;font-weight:700;}
+#checkout:hover,#clearSelection:hover{background:#0c0;}
+#messageBar{margin-bottom:6px;color:#a3ff4d;font-weight:bold;text-align:center;font-size:14px;background:rgba(0,255,100,0.1);border-radius:6px;padding:6px;transition:opacity .3s;}
 
-#messageBar{
-  margin-bottom:10px; color:#a3ff4d; font-weight:bold;
-  text-align:center; font-size:14px;
-  background:rgba(0,255,100,0.1);
-  border-radius:6px; padding:6px;
-  transition:opacity .3s ease;
-}
 </style>
 </head>
 <body>
 
 <nav>
-  <h1>Million Pixel Advanced</h1>
+  <h1>Million Pixel Pro</h1>
   <a href="#">About</a>
   <a href="#">Contact</a>
 </nav>
@@ -95,13 +56,12 @@ canvas{ display:block; width:100%; height:100%; touch-action:none; }
 
 <div id="sidebar">
   <div id="messageBar">Press "Buy Pixels" to start</div>
-  <div id="optionsWrapper">
-    <button class="optionBtn" id="applySameURL">Apply same URL</button>
-    <button class="optionBtn" id="applySameImage">Apply same Image</button>
+  <div id="optionMultiple" class="optionWrapper">
+    <button id="applySameURL" class="optionBtn">Apply same URL for all</button>
+    <button id="applySameImage" class="optionBtn">Apply same Image for all</button>
   </div>
   <div id="pixelList"></div>
   <div id="totalCost">Total Cost: 0 JOD</div>
-  <input type="file" id="uploadImage" accept="image/*" style="margin-top:10px;">
   <button id="checkout">Checkout</button>
   <button id="clearSelection">Clear Selection</button>
 </div>
@@ -115,32 +75,30 @@ const pixelList=document.getElementById('pixelList');
 const totalCostEl=document.getElementById('totalCost');
 const buyButton=document.getElementById('buyButton');
 const messageBar=document.getElementById('messageBar');
-const optionsWrapper=document.getElementById('optionsWrapper');
+const optionMultiple=document.getElementById('optionMultiple');
 const applySameURL=document.getElementById('applySameURL');
 const applySameImage=document.getElementById('applySameImage');
-const uploadImage=document.getElementById('uploadImage');
+const checkout=document.getElementById('checkout');
 const clearSelectionBtn=document.getElementById('clearSelection');
 
 const cols=1000,rows=1000;
 let purchasedPixels={}; 
-let selectedPixels=[]; 
+let selectedPixels=[];
 let hoveredCell=null;
 let buyMode=false;
 let scale=1, offsetX=0, offsetY=0, isDragging=false, dragStartX=0, dragStartY=0;
-let lastTouchDist = null, lastTouchPos = null;
+let selectionRect=null; // For rectangle selection
+let lastTouchDist=null,lastTouchPos=null;
 
-// --------------------------- CANVAS ---------------------------
+// ------------------- CANVAS -------------------
 function resizeCanvas(){
-  const dpr = Math.max(1, window.devicePixelRatio || 1);
-  const w = container.clientWidth, h = container.clientHeight;
-  canvas.width = Math.floor(w * dpr);
-  canvas.height = Math.floor(h * dpr);
-  canvas.style.width = w + 'px';
-  canvas.style.height = h + 'px';
-  ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
-  const fit = Math.min(w / cols, h / rows);
-  scale = fit; offsetX = (w - cols*scale)/2; offsetY = (h - rows*scale)/2;
-  constrainView(); draw();
+  const dpr=Math.max(1,window.devicePixelRatio||1);
+  const w=container.clientWidth,h=container.clientHeight;
+  canvas.width=w*dpr; canvas.height=h*dpr;
+  canvas.style.width=w+'px'; canvas.style.height=h+'px';
+  ctx.setTransform(dpr,0,0,dpr,0,0);
+  scale=Math.min(w/cols,h/rows); offsetX=(w-cols*scale)/2; offsetY=(h-rows*scale)/2;
+  draw();
 }
 function constrainView(){
   const w=canvas.clientWidth,h=canvas.clientHeight;
@@ -148,44 +106,50 @@ function constrainView(){
   if(worldW<=w) offsetX=(w-worldW)/2; else offsetX=Math.min(0,Math.max(offsetX,w-worldW));
   if(worldH<=h) offsetY=(h-worldH)/2; else offsetY=Math.min(0,Math.max(offsetY,h-worldH));
 }
-function screenToWorld(x,y){ const rect=canvas.getBoundingClientRect(); return {x:(x-rect.left-offsetX)/scale, y:(y-rect.top-offsetY)/scale}; }
+function screenToWorld(x,y){ const rect=canvas.getBoundingClientRect(); return {x:(x-rect.left-offsetX)/scale,y:(y-rect.top-offsetY)/scale}; }
 function worldToCell(x,y){ const col=Math.floor(x),row=Math.floor(y); if(col<0||row<0||col>=cols||row>=rows) return null; return {row,col}; }
 
 function clearViewport(){ ctx.save(); ctx.setTransform(1,0,0,1,0,0); ctx.clearRect(0,0,canvas.width,canvas.height); ctx.restore(); }
+
 function draw(){
   clearViewport();
   ctx.save(); ctx.translate(offsetX,offsetY); ctx.scale(scale,scale);
   ctx.fillStyle='#1b1b1b'; ctx.fillRect(0,0,cols,rows);
 
-  // Purchased pixels
+  // Purchased
   for(const key in purchasedPixels){
     const {row,col,img} = purchasedPixels[key];
-    if(img){ const i=new Image(); i.src=img; ctx.drawImage(i,col,row,1,1);}
-    else{ctx.fillStyle=varColor('--purchased','#0a0'); ctx.fillRect(col,row,1,1);}
+    if(img){ const i=new Image(); i.src=img; ctx.drawImage(i,col,row,1,1);} 
+    else{ ctx.fillStyle='#0a0'; ctx.fillRect(col,row,1,1); }
   }
 
-  // Selected pixels
-  for(const p of selectedPixels){
-    ctx.fillStyle=p.image? '#00d600': varColor('--selected','#00d600');
+  // Selected
+  selectedPixels.forEach(p=>{
+    ctx.fillStyle=p.image?'#00d600':'#00d600';
     ctx.fillRect(p.col,p.row,1,1);
-  }
+  });
 
   // Hover
   if(buyMode && hoveredCell){
     const key=`${hoveredCell.row},${hoveredCell.col}`;
     if(!purchasedPixels[key]){
-      ctx.fillStyle=varColor('--hover','#00a3ff');
+      ctx.fillStyle='#00a3ff';
       ctx.fillRect(hoveredCell.col,hoveredCell.row,1,1);
     }
   }
+
+  // Rectangle
+  if(selectionRect){
+    ctx.strokeStyle='#0ff'; ctx.lineWidth=1/scale; ctx.strokeRect(selectionRect.x,selectionRect.y,selectionRect.w,selectionRect.h);
+  }
+
   ctx.restore();
 }
-function varColor(name, fallback){ return getComputedStyle(document.documentElement).getPropertyValue(name).trim()||fallback; }
 
-// --------------------------- BUY & MENU ---------------------------
+// ------------------- BUY / MENU -------------------
 buyButton.addEventListener('click',()=>{
   buyMode=!buyMode;
-  sidebar.classList.toggle('open', buyMode);
+  sidebar.classList.toggle('open',buyMode);
   messageBar.textContent=buyMode?'Select pixels':'Press "Buy Pixels" to start';
 });
 
@@ -193,22 +157,33 @@ function updateSidebar(){
   pixelList.innerHTML='';
   selectedPixels.forEach((p,i)=>{
     const div=document.createElement('div'); div.className='pixelSection';
-    div.innerHTML=`<div class="pixelMeta">Row:${p.row},Col:${p.col}<br>
-      URL:<input type="url" value="${p.link}" placeholder="https://"><br>
-      Image:<input type="file" accept="image/*"></div>`;
+    div.innerHTML=`<div class="pixelMeta">Row:${p.row},Col:${p.col}<br>URL:<input type="url" value="${p.link}" placeholder="https://"><br>Image:<input type="file" accept="image/*"></div>`;
     pixelList.appendChild(div);
 
     // Hover sync
     div.addEventListener('mouseenter',()=>{ hoveredCell={row:p.row,col:p.col}; draw(); });
     div.addEventListener('mouseleave',()=>{ hoveredCell=null; draw(); });
+
+    // URL change
+    div.querySelector('input[type="url"]').addEventListener('change', e=>{ p.link=e.target.value; });
+
+    // Image upload
+    const fileInput=div.querySelector('input[type="file"]');
+    fileInput.addEventListener('change',e=>{
+      const file=e.target.files[0];
+      if(!file) return;
+      const reader=new FileReader();
+      reader.onload=ev=>{ p.image=ev.target.result; draw(); };
+      reader.readAsDataURL(file);
+    });
   });
 
   totalCostEl.textContent=`Total Cost: ${selectedPixels.length} JOD`;
-  optionsWrapper.style.display=selectedPixels.length>1?'flex':'none';
+  optionMultiple.style.display=selectedPixels.length>1?'flex':'none';
 }
 
 // Apply same URL
-applySameURL.addEventListener('click', ()=>{
+applySameURL.addEventListener('click',()=>{
   const url=prompt("Enter URL for all selected pixels");
   if(!url) return;
   selectedPixels.forEach(p=>p.link=url);
@@ -216,56 +191,79 @@ applySameURL.addEventListener('click', ()=>{
 });
 
 // Apply same Image
-applySameImage.addEventListener('click', ()=>{
-  uploadImage.click();
-});
-uploadImage.addEventListener('change', e=>{
-  const file = e.target.files[0];
-  if(!file) return;
-  const reader=new FileReader();
-  reader.onload=e=>{
-    selectedPixels.forEach(p=>p.image=e.target.result);
-    updateSidebar(); draw();
+applySameImage.addEventListener('click',()=>{
+  const inp=document.createElement('input'); inp.type='file'; inp.accept='image/*'; inp.click();
+  inp.onchange=e=>{
+    const file=e.target.files[0]; if(!file) return;
+    const reader=new FileReader();
+    reader.onload=ev=>{
+      selectedPixels.forEach(p=>p.image=ev.target.result);
+      updateSidebar(); draw();
+    };
+    reader.readAsDataURL(file);
   };
-  reader.readAsDataURL(file);
 });
 
 // Clear
 clearSelectionBtn.addEventListener('click',()=>{ selectedPixels=[]; updateSidebar(); draw(); });
 
-// --------------------------- SELECTION ---------------------------
-canvas.addEventListener('click', e=>{
+// ------------------- SELECTION -------------------
+let rectStart=null;
+canvas.addEventListener('mousedown', e=>{
   if(!buyMode) return;
-  const {x,y}=screenToWorld(e.clientX,e.clientY);
-  const cell=worldToCell(x,y);
-  if(!cell) return;
-  const key=`${cell.row},${cell.col}`;
-  if(purchasedPixels[key]) return;
-  if(selectedPixels.some(p=>p.row===cell.row && p.col===cell.col)) return;
-  selectedPixels.push({row:cell.row,col:cell.col,link:'',image:null});
+  isDragging=true; dragStartX=e.clientX-offsetX; dragStartY=e.clientY-offsetY;
+  rectStart=screenToWorld(e.clientX,e.clientY); selectionRect=null;
+});
+canvas.addEventListener('mousemove', e=>{
+  if(isDragging && rectStart){
+    const p=screenToWorld(e.clientX,e.clientY);
+    selectionRect={x:Math.min(rectStart.x,p.x),y:Math.min(rectStart.y,p.y),w:Math.abs(p.x-rectStart.x),h:Math.abs(p.y-rectStart.y)};
+    draw();
+  } else {
+    hoveredCell=worldToCell(...Object.values(screenToWorld(e.clientX,e.clientY)));
+    draw();
+  }
+});
+canvas.addEventListener('mouseup', e=>{
+  if(rectStart && selectionRect){
+    const startRow=Math.floor(selectionRect.y), startCol=Math.floor(selectionRect.x);
+    const endRow=Math.floor(selectionRect.y+selectionRect.h), endCol=Math.floor(selectionRect.x+selectionRect.w);
+    for(let r=startRow;r<=endRow;r++){
+      for(let c=startCol;c<=endCol;c++){
+        const key=`${r},${c}`;
+        if(!purchasedPixels[key] && !selectedPixels.some(p=>p.row===r && p.col===c)){
+          selectedPixels.push({row:r,col:c,link:'',image:null});
+        }
+      }
+    }
+  }
+  rectStart=null; selectionRect=null; isDragging=false;
   updateSidebar(); draw();
 });
 
-// --------------------------- HOVER ---------------------------
-canvas.addEventListener('mousemove', e=>{
-  const {x,y}=screenToWorld(e.clientX,e.clientY);
-  hoveredCell=worldToCell(x,y);
-  draw();
+// ------------------- VISITOR CLICK -------------------
+canvas.addEventListener('click', e=>{
+  if(buyMode) return;
+  const cell=worldToCell(...Object.values(screenToWorld(e.clientX,e.clientY)));
+  if(!cell) return;
+  const key=`${cell.row},${cell.col}`;
+  if(purchasedPixels[key] && purchasedPixels[key].link){
+    window.open(purchasedPixels[key].link,'_blank');
+  }
 });
 
-// --------------------------- DRAG ---------------------------
-canvas.addEventListener('mousedown', e=>{ isDragging=true; dragStartX=e.clientX-offsetX; dragStartY=e.clientY-offsetY; });
-window.addEventListener('mousemove', e=>{ if(isDragging){ offsetX=e.clientX-dragStartX; offsetY=e.clientY-dragStartY; draw(); }});
+// ------------------- DRAG -------------------
+window.addEventListener('mousemove', e=>{ if(isDragging && !rectStart){ offsetX=e.clientX-dragStartX; offsetY=e.clientY-dragStartY; draw(); }});
 window.addEventListener('mouseup', e=>{ isDragging=false; });
 
-// --------------------------- ZOOM ---------------------------
+// ------------------- ZOOM -------------------
 canvas.addEventListener('wheel', e=>{
   e.preventDefault();
-  const zoomFactor=Math.exp((e.deltaY<0?1:-1)*0.12);
-  const prevScale=scale;
+  let zoomFactor=Math.exp((e.deltaY<0?1:-1)*0.12);
+  let prevScale=scale;
   let next=prevScale*zoomFactor;
   const minScale=Math.min(container.clientWidth/cols,container.clientHeight/rows);
-  next=Math.max(minScale,Math.min(60,next));
+  if(next<minScale){ next=minScale; offsetX=(container.clientWidth-cols*next)/2; offsetY=(container.clientHeight-rows*next)/2; }
   const rect=canvas.getBoundingClientRect();
   const cx=e.clientX-rect.left,cy=e.clientY-rect.top;
   const worldX=(cx-offsetX)/prevScale,worldY=(cy-offsetY)/prevScale;
@@ -273,7 +271,7 @@ canvas.addEventListener('wheel', e=>{
   draw();
 },{passive:false});
 
-// --------------------------- MOBILE PINCH ---------------------------
+// ------------------- MOBILE PINCH -------------------
 canvas.addEventListener('touchstart', e=>{
   if(e.touches.length===2){
     const dx=e.touches[0].clientX-e.touches[1].clientX;
@@ -293,7 +291,7 @@ canvas.addEventListener('touchmove', e=>{
       const zoomFactor=dist/lastTouchDist;
       const prevScale=scale; let next=prevScale*zoomFactor;
       const minScale=Math.min(container.clientWidth/cols,container.clientHeight/rows);
-      next=Math.max(minScale,Math.min(60,next));
+      if(next<minScale){ next=minScale; offsetX=(container.clientWidth-cols*next)/2; offsetY=(container.clientHeight-rows*next)/2; }
       const rect=canvas.getBoundingClientRect();
       const cx=(e.touches[0].clientX+e.touches[1].clientX)/2-rect.left;
       const cy=(e.touches[0].clientY+e.touches[1].clientY)/2-rect.top;
@@ -313,30 +311,24 @@ canvas.addEventListener('touchmove', e=>{
 },{passive:false});
 canvas.addEventListener('touchend', e=>{ if(e.touches.length<2) lastTouchDist=null; if(e.touches.length===0) lastTouchPos=null; });
 
-// --------------------------- DATABASE SAVE (mock) ---------------------------
+// ------------------- DATABASE SAVE -------------------
 function savePurchasedPixels(){
   selectedPixels.forEach(p=>{
     const key=`${p.row},${p.col}`;
     purchasedPixels[key]={row:p.row,col:p.col,img:p.image,link:p.link};
   });
-  selectedPixels=[];
-  updateSidebar();
-  draw();
-  console.log('Saved to DB', purchasedPixels); // Replace with actual DB call
+  selectedPixels=[]; updateSidebar(); draw();
 }
 
-// Checkout button
-document.getElementById('checkout').addEventListener('click',()=>{
+checkout.addEventListener('click',()=>{
   if(!selectedPixels.length) return alert('Select pixels first!');
-  // Simulate payment success
   savePurchasedPixels();
-  alert('Payment successful, pixels purchased!');
+  alert('Payment successful!');
 });
 
-window.addEventListener('resize', resizeCanvas);
+window.addEventListener('resize',resizeCanvas);
 resizeCanvas();
 draw();
 </script>
-
 </body>
 </html>
